Fotos de Flickr y filtros

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_marginTop="52dp" >
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/iconWeather"
                 android:layout_width="wrap_content"
                 android:layout_height="182dp"
                 android:contentDescription="@string/placeholder"
