--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="182dp"
                 android:contentDescription="@string/placeholder"
+                android:textSize="@dimen/font_middle_size"
                 android:src="@drawable/nt_chancerain" />
         </LinearLayout>
 
