--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,133 +1,167 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom|left"
+    android:background="@color/purple"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <ImageView
-        android:id="@+id/BG_Weather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:adjustViewBounds="false"
-        android:contentDescription="@string/placeholder"
-        android:scaleType="center"
-        android:src="@drawable/bg" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:orientation="vertical" >
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_vertical" >
-
-            <TextView
-                android:id="@+id/cityname"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:gravity="center"
-                android:shadowColor="@color/gray_aplha"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="@string/placeholder_city"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_middle_size"
-                android:fontFamily="sans-serif" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_vertical"
-            android:layout_marginTop="52dp" >
+            android:layout_height="0dp"
+            android:layout_weight="0.09" >
 
             <ImageView
-                android:id="@+id/iconWeather"
-                android:layout_width="wrap_content"
-                android:layout_height="182dp"
-                android:contentDescription="@string/placeholder"
-                android:textSize="@dimen/font_middle_size"
-                android:src="@drawable/nt_chancerain" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_vertical"
-            android:layout_marginTop="256dp"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/degress_up"
-                android:layout_width="0dp"
-                android:layout_height="64dp"
-                android:layout_gravity="top"
-                android:layout_weight="1"
-                android:fontFamily="sans"
-                android:gravity="right"
-                android:shadowColor="@color/gray_aplha"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="@string/placeholder_degress_up"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_title_size" />
-
-            <TextView
-                android:id="@+id/degress_down"
-                android:layout_width="0dp"
-                android:layout_height="64dp"
-                android:layout_gravity="top"
-                android:layout_weight="1"
-                android:fontFamily="sans"
-                android:gravity="bottom|left"
-                android:shadowColor="@color/gray_aplha"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="@string/placeholder_degress_down"
-                android:textAlignment="gravity"
-                android:textColor="@color/purple"
-                android:textSize="@dimen/font_title2_size" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_vertical"
-            android:layout_marginTop="310dp" >
-
-            <TextView
-                android:id="@+id/datedisplay"
+                android:id="@+id/BG_Weather"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:shadowColor="@color/gray_aplha"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="@string/placeholder_date"
-                android:textAlignment="gravity"
-                android:textColor="@color/white" />
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="false"
+                android:baselineAlignBottom="false"
+                android:contentDescription="@string/placeholder"
+                android:cropToPadding="false"
+                android:scaleType="center"
+                android:src="@drawable/bg" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
 
-    </FrameLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" >
 
-</RelativeLayout>
+                    <ImageView
+                        android:id="@+id/iconWeather"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/placeholder"
+                        android:src="@drawable/chancerain" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2" >
+
+                        <TextView
+                            android:id="@+id/degress_up"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:shadowColor="@color/gray_aplha"
+                            android:shadowDx="1"
+                            android:shadowDy="1"
+                            android:shadowRadius="1"
+                            android:text="@string/placeholder_degress_up"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/font_title_size"
+                            android:typeface="sans" />
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.5"
+                            android:baselineAligned="false"
+                            android:gravity="left|center"
+                            android:measureWithLargestChild="false"
+                            android:orientation="vertical" >
+
+                            <TextView
+                                android:id="@+id/weatherDisplay"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/partlycloudy"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/font_middle_size" />
+
+                            <TextView
+                                android:id="@+id/dateDisplay"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/placeholder_date"
+                                android:textColor="@color/white" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@color/purple2" >
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/imageView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="70dp"
+                            android:src="@drawable/nt_chanceflurries" />
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:gravity="center"
+                            android:text="@string/placeholder_degress_up"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/imageView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="70dp"
+                            android:src="@drawable/nt_chanceflurries" />
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:gravity="center"
+                            android:text="@string/placeholder_degress_up"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/imageView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="70dp"
+                            android:src="@drawable/nt_chanceflurries" />
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:gravity="center"
+                            android:text="@string/placeholder_degress_up"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </FrameLayout>
+    </LinearLayout>
+
+</LinearLayout>
